# Argus

./: README.md  pyproject.toml
discord-bot-javascript/: .gitignore  argus-327119-fcc2761f300f.json  bot.js  config.json  final_sending.pcm  package-lock.json  package.json
discord-bot-javascript/recordings/: 184602867254951937_1632597572098.pcm  184602867254951937_1632597572734.pcm  184602867254951937_1632597574231.pcm  184602867254951937_1632597927402.pcm  184602867254951937_1632598076967.pcm  184602867254951937_1632598078995.pcm  184602867254951937_1632598081326.pcm  184602867254951937_1632598082063.pcm  184602867254951937_1632598082992.pcm  184602867254951937_1632598084155.pcm  184602867254951937_1632598084690.pcm  184602867254951937_1632598088651.pcm  184602867254951937_1632598092879.pcm  184602867254951937_1632598093756.pcm  184602867254951937_1632598095016.pcm  184602867254951937_1632598096105.pcm  184602867254951937_1632598096585.pcm  184602867254951937_1632598099057.pcm  184602867254951937_1632598101297.pcm  184602867254951937_1632598102500.pcm  184602867254951937_1632598103711.pcm  184602867254951937_1632598106483.pcm  184602867254951937_1632598109175.pcm  184602867254951937_1632598111411.pcm  184602867254951937_1632598112907.pcm  184602867254951937_1632599234044.pcm  184602867254951937_1632599242854.pcm  184602867254951937_1632599243780.pcm  184602867254951937_1632599259743.pcm  (+32 more)
rasa/: README.md  config.yml  domain.yml  pyproject.toml
rasa/data/: nlu.yml
search_engine/: docker-compose.yml
transcription-handler/: README.md  transcription-handler.py
(+10 files in other folders)
