[tool.poetry]
name = "Argus RASA"
version = "0.1.0"
description = ""
authors = ["zvezdin <git@zvezd.in>"]

[tool.poetry.dependencies]
python = "3.8.12"
rasa = "^2.8.7"
spacy = "^3.1.3"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
